syntax = "proto3";

package com.peerless2012.rpc.entity;

message HelloReply {
    string world = 1;
}