syntax = "proto3";

package com.peerless2012.rpc.entity;

message HelloRequest {
    string hello = 1;
}